[package]
name = "toinject"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

# For Windows API
[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
]
